fixed mobile spacing issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -534,12 +534,12 @@ tr:hover {
 
 		.container p {
 			margin-left: 0em;
-			margin-right: 1.5em;
+			margin-right: 2.5em;
 		}
 
 		#intro {
 			margin-left: 0em;
-			margin-right: 1.5em;
+			margin-right: 2.5em;
 		}
 
 		p {
